--- a/malimet.html
+++ b/malimet.html
@@ -10,7 +10,7 @@
     <div class="top-bar">
         <h2>Basketball🏀</h2>
         <div class="top-bar-buttons">
-            <a class="top-bar-button" href="zh2.html">Basty bet</a>
+            <a class="top-bar-button" href="index.html">Basty bet</a>
         </div>
     </div>
     <center>
@@ -38,4 +38,5 @@
     </table>
     </div>
 </body>
+
 </html>
