--- a/otzyv.html
+++ b/otzyv.html
@@ -7,7 +7,7 @@
     <div class="top-bar">
         <h2>Basketball🏀</h2>
         <div class="top-bar-buttons">
-            <a class="top-bar-button" href="zh2.html">Basty bet</a>
+            <a class="top-bar-button" href="index.html">Basty bet</a>
         </div>
     </div>
     <br><br><br><br><br><br> <br><br><br>
@@ -62,5 +62,6 @@
     </script>
 </body>
 </html>
+
 
 
