--- a/indexsite.html
+++ b/indexsite.html
@@ -38,9 +38,10 @@
 
         form.addEventListener("submit", function(event) {
             event.preventDefault(); 
-            window.location.href = "zh2.html"; 
+            window.location.href = "index.html"; 
         });
     </script>
 
 </body>
 </html>
+
