Fix link in top-bar to point to index.html

--- a/javas.html
+++ b/javas.html
@@ -10,7 +10,7 @@
     <div class="top-bar">
         <h2>Basketball🏀</h2>
         <div class="top-bar-buttons">
-            <a class="top-bar-button" href="zh2.html">Basty bet</a>
+            <a class="top-bar-button" href="index.html">Basty bet</a>
         </div>
     </div>
     <center>
@@ -40,4 +40,5 @@
     </div>
     <script src="index.js"></script>
 </body>
+
 </html>
