Change login form action to index.html

--- a/indexsite.html
+++ b/indexsite.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <div class="wrapper">
-        <form id="loginForm" action="zh2.html">
+        <form id="loginForm" action="index.html">
             <h1>TIRKELU</h1>
 
             <div class="input-box">
@@ -44,4 +44,5 @@
 
 </body>
 </html>
+
 
