--- a/javas.html
+++ b/javas.html
@@ -27,7 +27,7 @@
         </nav>
         <div class="block-cover">
             <div class="col-auto box mvp"><a href="gsw.html"><img src="IMG_3873.JPG"></a></div>
-            <div class="col-auto box entop"><img src="IMG_3876.JPG" alt=""></div>
+            <div class="col-auto box entop"><a href="mg.html"><img src="IMG_3876.JPG" alt=""></a></div>
             <div class="col-auto box entop"><img src="IMG_3877.JPG" alt=""></div>
             <div class="col-auto box mvp"><img src="IMG_3878.JPG" alt=""></div>
             <div class="col-auto box mvp" ><img src="IMG_3879.JPG" alt=""></div>
@@ -42,4 +42,5 @@
 </body>
 
 </html>
+
 
