Modify javas.html with new image links
Updated image links and added new HTML structure.

--- a/javas.html
+++ b/javas.html
@@ -28,13 +28,12 @@
         <div class="block-cover">
             <div class="col-auto box mvp"><a href="gsw.html"><img src="IMG_3873.JPG"></a></div>
             <div class="col-auto box entop"><a href="mg.html"><img src="IMG_3876.JPG" alt=""></a></div>
-            <div class="col-auto box entop"><img src="IMG_3877.JPG" alt=""></div>
-            <div class="col-auto box mvp"><img src="IMG_3878.JPG" alt=""></div>
-            <div class="col-auto box mvp" ><img src="IMG_3879.JPG" alt=""></div>
-            <div class="col-auto box entop"><img src="IMG_3880.JPG" alt=""></div>
-            <div class="col-auto box mvp"><img src="IMG_3881.JPG" alt=""></div>
-            <div class="col-auto box entop"><img src="IMG_3883.JPG" alt=""></div>
-
+            <div class="col-auto box entop"><a href="dal.html"><img src="IMG_3877.JPG" alt=""></a></div>
+            <div class="col-auto box mvp"><a href="76.html"><img src="IMG_3878.JPG" alt=""></a></div>
+            <div class="col-auto box mvp" ><a href="lak.html"><img src="IMG_3879.JPG" alt=""></a></div>
+            <div class="col-auto box entop"><a href="ind.html"><img src="IMG_3880.JPG" alt=""></a></div>
+            <div class="col-auto box mvp"><a href="sas.html"><img src="IMG_3881.JPG" alt=""></a></div>
+            <div class="col-auto box entop"><a href="heat.html"><img src="IMG_3883.JPG" alt=""></a></div>
         </div>
     </div>
     </div>
@@ -42,5 +41,6 @@
 </body>
 
 </html>
+
 
 
